--- a/archives/toutiao-search/2023-10-07.md
+++ b/archives/toutiao-search/2023-10-07.md
@@ -1,50 +1,72 @@
 # 2023-10-07
 
-共 182 条
+共 200 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 07 2023 14:00:49 GMT+0800 (China Standard Time) -->
-1. [俄试射“末日武器”](https://so.toutiao.com/search?keyword=俄试射“末日武器”)
-1. [女子带娃摸路边的狗被咬伤](https://so.toutiao.com/search?keyword=女子带娃摸路边的狗被咬伤)
+<!-- 最后更新时间 Sat Oct 07 2023 15:00:42 GMT+0800 (China Standard Time) -->
+1. [以色列国防军宣布进入战争状态](https://so.toutiao.com/search?keyword=以色列国防军宣布进入战争状态)
+1. [男子假期最后半天返程畅通无阻](https://so.toutiao.com/search?keyword=男子假期最后半天返程畅通无阻)
 1. [体育搭建友谊之桥](https://so.toutiao.com/search?keyword=体育搭建友谊之桥)
-1. [8.26亿人次出游花了7534.3亿元](https://so.toutiao.com/search?keyword=8.26亿人次出游花了7534.3亿元)
-1. [青银高速交通事故现场散落黄色粉末](https://so.toutiao.com/search?keyword=青银高速交通事故现场散落黄色粉末)
-1. [姚明谈男篮失利：可以接受辞职回家](https://so.toutiao.com/search?keyword=姚明谈男篮失利：可以接受辞职回家)
-1. [老君山1元午餐盘点多出1012元](https://so.toutiao.com/search?keyword=老君山1元午餐盘点多出1012元)
-1. [大妈偷榴莲后嫌不好 竟找老板退钱](https://so.toutiao.com/search?keyword=大妈偷榴莲后嫌不好+竟找老板退钱)
 1. [中秋国庆假期最挤城市排行榜](https://so.toutiao.com/search?keyword=中秋国庆假期最挤城市排行榜)
-1. [全红婵和启蒙教练亚运赛场重逢](https://so.toutiao.com/search?keyword=全红婵和启蒙教练亚运赛场重逢)
-1. [律师：传播干部不雅视频或触犯法律](https://so.toutiao.com/search?keyword=律师：传播干部不雅视频或触犯法律)
-1. [官方通报女子陪领导喝酒醉卧街头](https://so.toutiao.com/search?keyword=官方通报女子陪领导喝酒醉卧街头)
-1. [美方将42家中企列入出口管制清单](https://so.toutiao.com/search?keyword=美方将42家中企列入出口管制清单)
-1. [外媒：台积电市值蒸发770亿美元](https://so.toutiao.com/search?keyword=外媒：台积电市值蒸发770亿美元)
-1. [姚明：乔尔杰维奇合同年底到期](https://so.toutiao.com/search?keyword=姚明：乔尔杰维奇合同年底到期)
-1. [胡子会越刮越粗？关系不大](https://so.toutiao.com/search?keyword=胡子会越刮越粗？关系不大)
-1. [蔡徐坤说我也有自己的需求](https://so.toutiao.com/search?keyword=蔡徐坤说我也有自己的需求)
-1. [女子探阴间主题酒店 房间放棺材](https://so.toutiao.com/search?keyword=女子探阴间主题酒店+房间放棺材)
-1. [董卿缺席央视主持人大赛](https://so.toutiao.com/search?keyword=董卿缺席央视主持人大赛)
-1. [土军空袭叙利亚境内库尔德武装目标](https://so.toutiao.com/search?keyword=土军空袭叙利亚境内库尔德武装目标)
-1. [走失女童疑似曾原地等候约10分钟](https://so.toutiao.com/search?keyword=走失女童疑似曾原地等候约10分钟)
-1. [搜救队员：女童走失地附近有滩涂](https://so.toutiao.com/search?keyword=搜救队员：女童走失地附近有滩涂)
-1. [叙利亚军事学院遇袭已致112死240伤](https://so.toutiao.com/search?keyword=叙利亚军事学院遇袭已致112死240伤)
-1. [蓝天救援队公布疑似女童走失前视频](https://so.toutiao.com/search?keyword=蓝天救援队公布疑似女童走失前视频)
-1. [贝嫂首次回应20年前贝克汉姆出轨丑闻](https://so.toutiao.com/search?keyword=贝嫂首次回应20年前贝克汉姆出轨丑闻)
-1. [土耳其强硬回应美军击落土无人机](https://so.toutiao.com/search?keyword=土耳其强硬回应美军击落土无人机)
-1. [学生打数十个电话举报学校假期补课](https://so.toutiao.com/search?keyword=学生打数十个电话举报学校假期补课)
+1. [父母开车2000公里看望执勤中的女儿](https://so.toutiao.com/search?keyword=父母开车2000公里看望执勤中的女儿)
+1. [俄试射“末日武器”](https://so.toutiao.com/search?keyword=俄试射“末日武器”)
+1. [以色列军队宣布对加沙地带发动空袭](https://so.toutiao.com/search?keyword=以色列军队宣布对加沙地带发动空袭)
+1. [8.26亿人次出游花了7534.3亿元](https://so.toutiao.com/search?keyword=8.26亿人次出游花了7534.3亿元)
 1. [国内油价预计将迎来大幅下调](https://so.toutiao.com/search?keyword=国内油价预计将迎来大幅下调)
-1. [天天喝酒的人容易得什么病](https://so.toutiao.com/search?keyword=天天喝酒的人容易得什么病)
-1. [男子买车因拍视频遭工作人员驱赶](https://so.toutiao.com/search?keyword=男子买车因拍视频遭工作人员驱赶)
+1. [胡子会越刮越粗？关系不大](https://so.toutiao.com/search?keyword=胡子会越刮越粗？关系不大)
+1. [专家：传播干部不雅视频或触犯法律](https://so.toutiao.com/search?keyword=专家：传播干部不雅视频或触犯法律)
+1. [海滩走失女童事发地曾有人被卷走](https://so.toutiao.com/search?keyword=海滩走失女童事发地曾有人被卷走)
+1. [指挥中心大屏播放野外不雅画面监控](https://so.toutiao.com/search?keyword=指挥中心大屏播放野外不雅画面监控)
+1. [蔡徐坤说我也有自己的需求](https://so.toutiao.com/search?keyword=蔡徐坤说我也有自己的需求)
+1. [以色列遭火箭弹袭击已致1死16伤](https://so.toutiao.com/search?keyword=以色列遭火箭弹袭击已致1死16伤)
+1. [官方通报女子陪领导喝酒醉卧街头](https://so.toutiao.com/search?keyword=官方通报女子陪领导喝酒醉卧街头)
+1. [史玉柱等被强制执行17亿元](https://so.toutiao.com/search?keyword=史玉柱等被强制执行17亿元)
+1. [贝嫂首次回应20年前贝克汉姆出轨丑闻](https://so.toutiao.com/search?keyword=贝嫂首次回应20年前贝克汉姆出轨丑闻)
+1. [大妈偷榴莲后嫌不好 竟找老板退钱](https://so.toutiao.com/search?keyword=大妈偷榴莲后嫌不好+竟找老板退钱)
+1. [姚明谈男篮失利：可以接受辞职回家](https://so.toutiao.com/search?keyword=姚明谈男篮失利：可以接受辞职回家)
+1. [蓝天救援队公布疑似女童走失前视频](https://so.toutiao.com/search?keyword=蓝天救援队公布疑似女童走失前视频)
+1. [猫眼就张艺兴演唱会门票超售致歉](https://so.toutiao.com/search?keyword=猫眼就张艺兴演唱会门票超售致歉)
 1. [中国男篮颁奖仪式像犯错的孩子](https://so.toutiao.com/search?keyword=中国男篮颁奖仪式像犯错的孩子)
+1. [走失女童疑似曾原地等候约10分钟](https://so.toutiao.com/search?keyword=走失女童疑似曾原地等候约10分钟)
+1. [亚运冠军王楠低调回家](https://so.toutiao.com/search?keyword=亚运冠军王楠低调回家)
+1. [货车行驶中路面突然塌陷](https://so.toutiao.com/search?keyword=货车行驶中路面突然塌陷)
+1. [搜救队员：女童走失地附近有滩涂](https://so.toutiao.com/search?keyword=搜救队员：女童走失地附近有滩涂)
+1. [杭州亚运会已累计打破世界纪录15项](https://so.toutiao.com/search?keyword=杭州亚运会已累计打破世界纪录15项)
+1. [美方将42家中企列入出口管制清单](https://so.toutiao.com/search?keyword=美方将42家中企列入出口管制清单)
+1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
+1. [老君山1元午餐盘点多出1012元](https://so.toutiao.com/search?keyword=老君山1元午餐盘点多出1012元)
+1. [男子中秋夜枪击邻家父子致1死1伤](https://so.toutiao.com/search?keyword=男子中秋夜枪击邻家父子致1死1伤)
+1. [余承东评问界M7销量：起死回生](https://so.toutiao.com/search?keyword=余承东评问界M7销量：起死回生)
+1. [普京呼吁：建设新世界反击西方霸权](https://so.toutiao.com/search?keyword=普京呼吁：建设新世界反击西方霸权)
+1. [青银高速交通事故现场散落黄色粉末](https://so.toutiao.com/search?keyword=青银高速交通事故现场散落黄色粉末)
+1. [中国女游客在泰国五星级酒店坠亡](https://so.toutiao.com/search?keyword=中国女游客在泰国五星级酒店坠亡)
 1. [女子曝歌手罗中旭婚内出轨](https://so.toutiao.com/search?keyword=女子曝歌手罗中旭婚内出轨)
 1. [一安居房被指造价1亿已提取10亿](https://so.toutiao.com/search?keyword=一安居房被指造价1亿已提取10亿)
+1. [霍震霆霍启刚父子同框](https://so.toutiao.com/search?keyword=霍震霆霍启刚父子同框)
+1. [男子买车因拍视频遭工作人员驱赶](https://so.toutiao.com/search?keyword=男子买车因拍视频遭工作人员驱赶)
+1. [天天喝酒的人容易得什么病](https://so.toutiao.com/search?keyword=天天喝酒的人容易得什么病)
+1. [重庆整体旅游订单量同比去年增145%](https://so.toutiao.com/search?keyword=重庆整体旅游订单量同比去年增145%)
+1. [《坚如磐石》片名的意思](https://so.toutiao.com/search?keyword=《坚如磐石》片名的意思)
+1. [女子探阴间主题酒店 房间放棺材](https://so.toutiao.com/search?keyword=女子探阴间主题酒店+房间放棺材)
+1. [杨鸣评价中国男篮心态失衡](https://so.toutiao.com/search?keyword=杨鸣评价中国男篮心态失衡)
+1. [女子带娃摸路边的狗被咬伤](https://so.toutiao.com/search?keyword=女子带娃摸路边的狗被咬伤)
+1. [实拍俄“跳伞大师”坠落水面死亡](https://so.toutiao.com/search?keyword=实拍俄“跳伞大师”坠落水面死亡)
+1. [白宫：支持舒默率团访华](https://so.toutiao.com/search?keyword=白宫：支持舒默率团访华)
+1. [普京：一定会实现对乌军事行动目标](https://so.toutiao.com/search?keyword=普京：一定会实现对乌军事行动目标)
+1. [你国庆回家花了多少钱](https://so.toutiao.com/search?keyword=你国庆回家花了多少钱)
+1. [全红婵和启蒙教练亚运赛场重逢](https://so.toutiao.com/search?keyword=全红婵和启蒙教练亚运赛场重逢)
+1. [律师：传播干部不雅视频或触犯法律](https://so.toutiao.com/search?keyword=律师：传播干部不雅视频或触犯法律)
+1. [外媒：台积电市值蒸发770亿美元](https://so.toutiao.com/search?keyword=外媒：台积电市值蒸发770亿美元)
+1. [姚明：乔尔杰维奇合同年底到期](https://so.toutiao.com/search?keyword=姚明：乔尔杰维奇合同年底到期)
+1. [董卿缺席央视主持人大赛](https://so.toutiao.com/search?keyword=董卿缺席央视主持人大赛)
+1. [土军空袭叙利亚境内库尔德武装目标](https://so.toutiao.com/search?keyword=土军空袭叙利亚境内库尔德武装目标)
+1. [叙利亚军事学院遇袭已致112死240伤](https://so.toutiao.com/search?keyword=叙利亚军事学院遇袭已致112死240伤)
+1. [土耳其强硬回应美军击落土无人机](https://so.toutiao.com/search?keyword=土耳其强硬回应美军击落土无人机)
+1. [学生打数十个电话举报学校假期补课](https://so.toutiao.com/search?keyword=学生打数十个电话举报学校假期补课)
 1. [普京71岁生日](https://so.toutiao.com/search?keyword=普京71岁生日)
 1. [陈梦王曼昱被闪光灯干扰劝阻观众](https://so.toutiao.com/search?keyword=陈梦王曼昱被闪光灯干扰劝阻观众)
 1. [男子买羊腿送领导 打开却是大棒骨](https://so.toutiao.com/search?keyword=男子买羊腿送领导+打开却是大棒骨)
-1. [中国女游客在泰国五星级酒店坠亡](https://so.toutiao.com/search?keyword=中国女游客在泰国五星级酒店坠亡)
-1. [男子中秋夜枪击邻家父子致1死1伤](https://so.toutiao.com/search?keyword=男子中秋夜枪击邻家父子致1死1伤)
 1. [假期国内游收入同比增129.5%](https://so.toutiao.com/search?keyword=假期国内游收入同比增129.5%)
-1. [亚运冠军王楠低调回家](https://so.toutiao.com/search?keyword=亚运冠军王楠低调回家)
-1. [男子假期最后半天返程畅通无阻](https://so.toutiao.com/search?keyword=男子假期最后半天返程畅通无阻)
 1. [中秋国庆广东接待游客6386.2万人次](https://so.toutiao.com/search?keyword=中秋国庆广东接待游客6386.2万人次)
 1. [克里米亚一公园拆除自由女神像模型](https://so.toutiao.com/search?keyword=克里米亚一公园拆除自由女神像模型)
 1. [法拉第未来：将向贾跃亭交付车辆](https://so.toutiao.com/search?keyword=法拉第未来：将向贾跃亭交付车辆)
@@ -52,14 +74,11 @@
 1. [湖北黄石人大原副主任王新华被双开](https://so.toutiao.com/search?keyword=湖北黄石人大原副主任王新华被双开)
 1. [老师订10余套演出服用完立马退货](https://so.toutiao.com/search?keyword=老师订10余套演出服用完立马退货)
 1. [普京：我曾提议俄加入北约但遭拒绝](https://so.toutiao.com/search?keyword=普京：我曾提议俄加入北约但遭拒绝)
-1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
 1. [印度给加拿大下“最后通牒”](https://so.toutiao.com/search?keyword=印度给加拿大下“最后通牒”)
 1. [女生国庆回家在婚礼上搞笑打镲](https://so.toutiao.com/search?keyword=女生国庆回家在婚礼上搞笑打镲)
 1. [北方老丈人带南方女婿囤秋菜](https://so.toutiao.com/search?keyword=北方老丈人带南方女婿囤秋菜)
 1. [专家：春节、元宵等可增加假期](https://so.toutiao.com/search?keyword=专家：春节、元宵等可增加假期)
-1. [余承东评问界M7销量：起死回生](https://so.toutiao.com/search?keyword=余承东评问界M7销量：起死回生)
 1. [普京谴责叙利亚军事学院遭袭事件](https://so.toutiao.com/search?keyword=普京谴责叙利亚军事学院遭袭事件)
-1. [杨鸣评价中国男篮心态失衡](https://so.toutiao.com/search?keyword=杨鸣评价中国男篮心态失衡)
 1. [景区回应女子彩虹滑道撞倒男孩](https://so.toutiao.com/search?keyword=景区回应女子彩虹滑道撞倒男孩)
 1. [美芯片巨头游说放松对华限制](https://so.toutiao.com/search?keyword=美芯片巨头游说放松对华限制)
 1. [中国足球小将战胜河床](https://so.toutiao.com/search?keyword=中国足球小将战胜河床)
@@ -70,7 +89,6 @@
 1. [海南“黄金周”旅游市场观察](https://so.toutiao.com/search?keyword=海南“黄金周”旅游市场观察)
 1. [上海女老师被骗400万 警方劝阻12次](https://so.toutiao.com/search?keyword=上海女老师被骗400万+警方劝阻12次)
 1. [记者探访上海4岁女童消失现场](https://so.toutiao.com/search?keyword=记者探访上海4岁女童消失现场)
-1. [你国庆回家花了多少钱](https://so.toutiao.com/search?keyword=你国庆回家花了多少钱)
 1. [超级黄金周：流动的中国展现高效率](https://so.toutiao.com/search?keyword=超级黄金周：流动的中国展现高效率)
 1. [孙子帮奶奶砸黄豆不料被棒子砸到](https://so.toutiao.com/search?keyword=孙子帮奶奶砸黄豆不料被棒子砸到)
 1. [外媒关注中国假日经济强劲增长](https://so.toutiao.com/search?keyword=外媒关注中国假日经济强劲增长)
